Fixed keyboard layout bug

--- a/frontend/css/style.css
+++ b/frontend/css/style.css
@@ -119,7 +119,7 @@ input {
 }
 
 #keys .keyRow:nth-of-type(3) {
-    margin-left: calc((var(--key-width) + 2 * var(--margin)) / 2);
+    margin-left: calc((var(--key-width) + 2 * var(--margin)) * 3 / 4);
 }
 
 #controls {
